logs/geonode-avatar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avatar'...
Listing './lib/python3.5/site-packages/avatar/locale'...
Listing './lib/python3.5/site-packages/avatar/locale/de'...
Listing './lib/python3.5/site-packages/avatar/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/avatar/locale/fr'...
Listing './lib/python3.5/site-packages/avatar/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/avatar/locale/pt_BR'...
Listing './lib/python3.5/site-packages/avatar/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/avatar/management'...
Listing './lib/python3.5/site-packages/avatar/management/commands'...
Compiling './lib/python3.5/site-packages/avatar/management/commands/rebuild_avatars.py'...
***   File "./lib/python3.5/site-packages/avatar/management/commands/rebuild_avatars.py", line 13
    print "Rebuilding Avatar id=%s at size %s." % (avatar.id, size)
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/avatar/media'...
Listing './lib/python3.5/site-packages/avatar/media/avatar'...
Listing './lib/python3.5/site-packages/avatar/media/avatar/img'...
Listing './lib/python3.5/site-packages/avatar/migrations'...
Listing './lib/python3.5/site-packages/avatar/templates'...
Listing './lib/python3.5/site-packages/avatar/templates/avatar'...
Listing './lib/python3.5/site-packages/avatar/templatetags'...
Listing './lib/python3.5/site-packages/avatar/testdata'...
Listing './lib/python3.5/site-packages/geonode_avatar-2.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
